--- a/client/app/job/job-list.html
+++ b/client/app/job/job-list.html
@@ -1,6 +1,19 @@
-<div ng-controller="JobListCtrl">
-  <ul>
-    <li ng-repeat="job in jobs">{{job.title}}</li>
-  </ul>
+<div class="container">
+  <div class="page-header">
+    <h1>Jobs board</h1>
+  </div>
+  <div class="jobs">
+    <a ng-repeat="job in jobs" ng-href="{{'/#jobs/'+job._id}}">
+
+      <div class="job-right">
+        <div>{{job.start}}</div>
+        <div class="text-muted">{{job.created | date:'dd/MM'}}</div>
+      </div>
+
+      <div class="job-body">
+        <h4 ng-bind="job.title"></h4>
+        {{job.location}}
+      </div>
+    </a>
+  </div>
 </div>
-    
